<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<android.support.v7.widget.FitWindowsLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Student"
    tools:ignore="Deprecated">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editText"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="44dp"
            android:layout_marginRight="44dp"
            android:layout_marginBottom="22dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@string/Enter_your_prn"
            android:textColorLink="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/editText3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="44dp"
            android:layout_marginRight="44dp"
            android:layout_marginBottom="428dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/enter_your_password"
            android:textColorLink="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/loginstudent_BTN"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="328dp"
            android:background="@drawable/custom_button"
            android:text="@string/Login"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.922" />

        <Button
            android:id="@+id/CreateaccountSTUD_BTN"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="72dp"
            android:background="@drawable/custom_button"
            android:text="@string/Create_an_account"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="189dp"
            android:layout_height="27dp"
            android:layout_marginStart="111dp"
            android:layout_marginLeft="111dp"
            android:layout_marginTop="123dp"
            android:layout_marginEnd="111dp"
            android:layout_marginRight="111dp"
            android:text="@string/Dont_have_an_account_yet"
            app:layout_constraintBottom_toTopOf="@+id/CreateaccountSTUD_BTN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox"
            app:layout_constraintVertical_bias="1.0" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginLeft="58dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="206dp"
            android:layout_marginRight="206dp"
            android:layout_marginBottom="192dp"
            android:text="@string/Remember_me"
            android:textColorLink="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/CreateaccountSTUD_BTN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginstudent_BTN"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="72dp"
            android:layout_height="34dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginEnd="67dp"
            android:layout_marginRight="67dp"
            android:layout_marginBottom="28dp"
            android:text="@string/Password"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/loginstudent_BTN"
            app:layout_constraintEnd_toStartOf="@+id/editText3"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="102dp"
            android:layout_height="65dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="37dp"
            android:layout_marginRight="37dp"
            android:text="@string/Permanent_registration_number"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toStartOf="@+id/editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.FitWindowsLinearLayout>

